# wokelang-ssg

./: .tool-versions  ABI-FFI-README.adoc  CLOUDFLARE-SETUP.adoc  CLOUDFLARE-SETUP.md  COMPLETE-INTEGRATION-2026-01-31.md  Cargo.toml  ECOSYSTEM.scm  META.scm  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  STATE.scm
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  cloudflare-pages.yml
content/: index.md
content/docs/: getting-started.md
ffi/zig/src/: main.zig
frontend/: deno.json  rescript.json
frontend/src/: App.res  Layout.res  Router.res  index.html
frontend/static/css/: style.css
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_main.rs
scripts/: build.sh
src/: builder.rs  config.rs  content.rs  feeds.rs  main.rs  server.rs  sitemap.rs  templates.rs
src/abi/: Types.idr
ssg/: main.woke
templates/: base.html  page.html
